centered videos and iframes. fixed bug with weird aligning when screensize was between 641 and 671 px

--- a/src/timelinejs/css/timeline.css
+++ b/src/timelinejs/css/timeline.css
@@ -580,7 +580,7 @@
         display:none
     }
 }
-@media (max-width:671px) {
+@media (max-width:641px) {
     .vco-slider .slider-item{
         padding-right:20px !important;
         box-sizing:border-box;
@@ -1430,7 +1430,9 @@
     clear:both
 }
 .vco-storyjs img, .vco-storyjs embed, .vco-storyjs object, .vco-storyjs video, .vco-storyjs iframe {
-    max-width:100%
+    max-width:100%;
+    display:block;
+    margin:0 auto;
 }
 .vco-storyjs img {
     max-height:100%;
